tests/fail/elaboration/unsolved/hole-ann.fathom
//~ allow-errors = true

?woopsie : Type
